--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
                                     <a id="get_tkt" href="./register.html" style="font-family: tedFont;">Get Tickets
                                         Now</a>
                                 </div>
-                                
+
                             </div>
 
                             <!-- countdown area start -->
-                            <div class="mt-4" >
+                            <div class="mt-4">
                                 <div>
                                     <div id="counterArea" style="margin-left: auto; margin-right: auto;">
 
@@ -240,16 +240,17 @@
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
-                                        <img src="img/performer/1.png" alt="">
+                                        <img src="img/Speaker Photos/Anita Pratp.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Mohanlal</h4>
-                                    <span>Actor</span>
+                                    <h4>Anita Pratap</h4>
+                                    <!-- <span>Actor</span> -->
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="https://twitter.com/aapanitapratap" style="color: aliceblue;"
+                                            class="fa fa-twitter"></a>
+                                        <a href="https://www.facebook.com/AAPAnitaPratap" style="color: aliceblue;"
+                                            class="fa fa-facebook"></a>
                                     </div>
                                 </div>
                             </div>
@@ -258,16 +259,21 @@
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
-                                        <img src="img/performer/1.png" alt="">
+                                        <img src="img/Speaker Photos/Kiyosaki 2.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Mohanlal</h4>
-                                    <span>Actor</span>
+                                    <h4>Robert Kiyosaki</h4>
+                                    <!-- <span>Actor</span> -->
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
+                                            class="fa fa-facebook"></a>
+                                        <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
+                                            style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        <a href="https://www.instagram.com/therealkiyosaki/" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
+                                        <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
+                                            class="fa fa-twitter"></a>
                                     </div>
                                 </div>
                             </div>
@@ -276,16 +282,21 @@
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
-                                        <img src="img/performer/2.png" alt="">
+                                        <img src="img/Speaker Photos/Maneesh Narayanan.JPG" alt="">
                                     </a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Prithviraj</h4>
-                                    <span>Actor</span>
+                                    <h4>Maneesh Narayanan</h4>
+                                    <!-- <span>Actor</span> -->
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="https://www.facebook.com/maneeshnarayananhere"
+                                            style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="https://www.youtube.com/channel/UCarJ0vXukNHIopDXFwgl6NA"
+                                            style="color: aliceblue;" class="fa fa-youtube"></a>
+                                        <a href="https://www.instagram.com/maneesh_narayn" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
+                                        <a href="https://twitter.com/maneeshnarayan" style="color: aliceblue;"
+                                            class="fa fa-twitter"></a>
                                     </div>
                                 </div>
                             </div>
@@ -294,16 +305,15 @@
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
-                                        <img src="img/performer/3.png" alt="">
+                                        <img src="img/Speaker Photos/Susmita.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="performer_heading">
-                                    <h4>Virat Kohli</h4>
-                                    <span>Cricketer</span>
+                                    <h4>Susmita Adhikari</h4>
+                                    <!-- <span>Cricketer</span> -->
                                     <div>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
-                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="https://www.instagram.com/susmita_sashimi" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
                                     </div>
                                 </div>
                             </div>
