--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
 
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
 
 <body>
