--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                                 <div>
                                     <div id="counterArea" style="margin-left: auto; margin-right: auto;">
 
+
                                     </div>
                                 </div>
                             </div>
@@ -240,7 +241,8 @@
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
-                                        <img src="img/Speaker Photos/Anita Pratp.jpg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Anita Pratp.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="performer_heading">
@@ -251,6 +253,8 @@
                                             class="fa fa-twitter"></a>
                                         <a href="https://www.facebook.com/AAPAnitaPratap" style="color: aliceblue;"
                                             class="fa fa-facebook"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
                                 </div>
                             </div>
@@ -259,21 +263,22 @@
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
-                                        <img src="img/Speaker Photos/Kiyosaki 2.jpg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Kiyosaki 2.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Robert Kiyosaki</h4>
                                     <!-- <span>Actor</span> -->
                                     <div>
-                                        <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
-                                            class="fa fa-facebook"></a>
-                                        <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
-                                            style="color: aliceblue;" class="fa fa-youtube"></a>
-                                        <a href="https://www.instagram.com/therealkiyosaki/" style="color: aliceblue;"
-                                            class="fa fa-instagram"></a>
                                         <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
                                             class="fa fa-twitter"></a>
+                                        <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
+                                            class="fa fa-facebook"></a>
+                                        <a href="https://www.instagram.com/therealkiyosaki/" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
+                                        <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
+                                            style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
                                 </div>
                             </div>
@@ -282,21 +287,22 @@
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
-                                        <img src="img/Speaker Photos/Maneesh Narayanan.JPG" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Maneesh Narayanan.JPG" alt="">
                                     </a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Maneesh Narayanan</h4>
                                     <!-- <span>Actor</span> -->
                                     <div>
-                                        <a href="https://www.facebook.com/maneeshnarayananhere"
-                                            style="color: aliceblue;" class="fa fa-facebook"></a>
-                                        <a href="https://www.youtube.com/channel/UCarJ0vXukNHIopDXFwgl6NA"
-                                            style="color: aliceblue;" class="fa fa-youtube"></a>
-                                        <a href="https://www.instagram.com/maneesh_narayn" style="color: aliceblue;"
-                                            class="fa fa-instagram"></a>
                                         <a href="https://twitter.com/maneeshnarayan" style="color: aliceblue;"
                                             class="fa fa-twitter"></a>
+                                        <a href="https://www.facebook.com/maneeshnarayananhere"
+                                            style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="https://www.instagram.com/maneesh_narayn" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
+                                        <a href="https://www.youtube.com/channel/UCarJ0vXukNHIopDXFwgl6NA"
+                                            style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
                                 </div>
                             </div>
@@ -305,15 +311,151 @@
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
                                 <div data-tilt class="thumb">
                                     <a href="./performer.html">
-                                        <img src="img/Speaker Photos/Susmita.jpg" alt="">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Susmita.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Susmita Adhikari</h4>
                                     <!-- <span>Cricketer</span> -->
                                     <div>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
                                         <a href="https://www.instagram.com/susmita_sashimi" style="color: aliceblue;"
                                             class="fa fa-instagram"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                <div data-tilt class="thumb">
+                                    <a href="./performer.html">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Ravichandran.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>>Ravichandran C</h4>
+                                    <!-- <span>Cricketer</span> -->
+                                    <div>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a href="https://www.facebook.com/Pavithreswaram" style="color: aliceblue;"
+                                            class="fa fa-facebook"></a>
+                                        <a href="https://www.instagram.com/ravichandran_c1970" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
+                                        <a href="https://www.youtube.com/c/AntiVirusrc/videos" style="color: aliceblue;"
+                                            class="fa fa-youtube"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                <div data-tilt class="thumb">
+                                    <a href="./performer.html">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Radha Gomaty .jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Radha Gomaty</h4>
+                                    <!-- <span>Cricketer</span> -->
+                                    <div>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a href="https://www.facebook.com/radha.gomaty" style="color: aliceblue;"
+                                            class="fa fa-facebook"></a>
+                                        <a href="https://www.instagram.com/radhagomaty" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                <div data-tilt class="thumb">
+                                    <a href="./performer.html">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/sun.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Sun Knudsen</h4>
+                                    <!-- <span>Cricketer</span> -->
+                                    <div>
+                                        <a href="https://twitter.com/sunknudsen" style="color: aliceblue;"
+                                            class="fa fa-twitter"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                        <a href="https://www.youtube.com/c/SunKnudsen/featured"
+                                            style="color: aliceblue;" class="fa fa-youtube"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                <div data-tilt class="thumb">
+                                    <a href="./performer.html">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Dr. Madhusoodhanan .jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Madhusudanan C G</h4>
+                                    <!-- <span>Cricketer</span> -->
+                                    <div>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                <div data-tilt class="thumb">
+                                    <a href="./performer.html">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Raymi.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Illusionist Raymi</h4>
+                                    <!-- <span>Cricketer</span> -->
+                                    <div>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="https://www.instagram.com/illusionistraymi" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
+                                        <a href="https://www.youtube.com/c/ramyn/featured" style="color: aliceblue;"
+                                            class="fa fa-youtube"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-9" style="margin-left: auto; margin-right: auto;">
+                            <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
+                                <div data-tilt class="thumb">
+                                    <a href="./performer.html">
+                                        <img style="object-fit:cover; max-width: 230px; height: 300px; margin-left: auto; margin-right: auto;"
+                                            src="img/Speaker Photos/Jo Marshall.jpeg" alt="">
+                                    </a>
+                                </div>
+                                <div class="performer_heading">
+                                    <h4>Jo Marshall</h4>
+                                    <!-- <span>Cricketer</span> -->
+                                    <div>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="https://www.instagram.com/jomarshal.music/" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
+                                        <a href="ttps://www.youtube.com/channel/UCH_cAFrCPJzRWgohL8IlzKw"
+                                            style="color: aliceblue;" class="fa fa-youtube"></a>
                                     </div>
                                 </div>
                             </div>
