--- a/performer.html
+++ b/performer.html
@@ -114,6 +114,8 @@
                                                 class="fa fa-twitter"></a>
                                             <a href="https://www.facebook.com/AAPAnitaPratap" style="color: aliceblue;"
                                                 class="fa fa-facebook"></a>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -159,14 +161,16 @@
                                         <!-- <h4>write anything</h4> -->
                                         <!-- <span>Acoustic drum</span> -->
                                         <div>
-                                            <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
-                                                class="fa fa-facebook"></a>
-                                            <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
-                                                style="color: aliceblue;" class="fa fa-youtube"></a>
-                                            <a href="https://www.instagram.com/therealkiyosaki/"
-                                                style="color: aliceblue;" class="fa fa-instagram"></a>
                                             <a href="https://twitter.com/theRealKiyosaki" style="color: aliceblue;"
                                                 class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/RobertKiyosaki" style="color: aliceblue;"
+                                                class="fa fa-facebook"></a>
+                                            <a href="https://www.instagram.com/therealkiyosaki/"
+                                                style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="https://www.youtube.com/c/TheRichDadChannel/videos"
+                                                style="color: aliceblue;" class="fa fa-youtube"></a>
+
+
                                         </div>
                                     </div>
                                 </div>
@@ -215,14 +219,15 @@
                                         <!-- <h4>write anything</h4> -->
                                         <!-- <span>Acoustic drum</span> -->
                                         <div>
-                                            <a href="https://www.facebook.com/maneeshnarayananhere"
-                                                style="color: aliceblue;" class="fa fa-facebook"></a>
-                                            <a href="https://www.youtube.com/channel/UCarJ0vXukNHIopDXFwgl6NA"
-                                                style="color: aliceblue;" class="fa fa-youtube"></a>
-                                            <a href="https://www.instagram.com/maneesh_narayn" style="color: aliceblue;"
-                                                class="fa fa-instagram"></a>
                                             <a href="https://twitter.com/maneeshnarayan" style="color: aliceblue;"
                                                 class="fa fa-twitter"></a>
+                                            <a href="https://www.facebook.com/maneeshnarayananhere"
+                                                style="color: aliceblue;" class="fa fa-facebook"></a>
+                                            <a href="https://www.instagram.com/maneesh_narayn" style="color: aliceblue;"
+                                                class="fa fa-instagram"></a>
+                                            <a href="https://www.youtube.com/channel/UCarJ0vXukNHIopDXFwgl6NA"
+                                                style="color: aliceblue;" class="fa fa-youtube"></a>
+
                                         </div>
                                     </div>
                                 </div>
@@ -268,8 +273,11 @@
                                         <!-- <h4>write anything</h4> -->
                                         <!-- <span>Acoustic drum</span> -->
                                         <div>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
                                             <a href="https://www.instagram.com/susmita_sashimi"
                                                 style="color: aliceblue;" class="fa fa-instagram"></a>
+                                            <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -317,12 +325,15 @@
                                     <!-- <h4>write anything</h4> -->
                                     <!-- <span>Acoustic drum</span> -->
                                     <div>
-                                        <a href="https://www.youtube.com/c/AntiVirusrc/videos" style="color: aliceblue;"
-                                            class="fa fa-youtube"></a>
-                                        <a href="https://www.instagram.com/ravichandran_c1970" style="color: aliceblue;"
-                                            class="fa fa-instagram"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
                                         <a href="https://www.facebook.com/Pavithreswaram" style="color: aliceblue;"
                                             class="fa fa-facebook"></a>
+                                        <a href="https://www.instagram.com/ravichandran_c1970" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
+                                        <a href="https://www.youtube.com/c/AntiVirusrc/videos" style="color: aliceblue;"
+                                            class="fa fa-youtube"></a>
+
+
                                     </div>
                                 </div>
                             </div>
@@ -367,10 +378,13 @@
                                     <!-- <h4>write anything</h4> -->
                                     <!-- <span>Acoustic drum</span> -->
                                     <div>
-                                        <a href="https://www.instagram.com/radhagomaty" style="color: aliceblue;"
-                                            class="fa fa-instagram"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
                                         <a href="https://www.facebook.com/radha.gomaty" style="color: aliceblue;"
                                             class="fa fa-facebook"></a>
+                                        <a href="https://www.instagram.com/radhagomaty" style="color: aliceblue;"
+                                            class="fa fa-instagram"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+
                                     </div>
                                 </div>
                             </div>
@@ -418,8 +432,11 @@
                                     <div>
                                         <a href="https://twitter.com/sunknudsen" style="color: aliceblue;"
                                             class="fa fa-twitter"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
                                         <a href="https://www.youtube.com/c/SunKnudsen/featured"
                                             style="color: aliceblue;" class="fa fa-youtube"></a>
+
                                     </div>
                                 </div>
                             </div>
@@ -459,17 +476,17 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="single_performer wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                                 <div data-tilt class="thumb">
-                                    <img src="img/Speaker Photos/Madhusoodhanan.jpg" alt="">
+                                    <img src="img/Speaker Photos/Dr. Madhusoodhanan .jpg" alt="">
                                 </div>
                                 <div class="performer_heading">
                                     <!-- <h4>write anything</h4> -->
                                     <!-- <span>Acoustic drum</span> -->
-                                    <!-- <div>
-                                        <a href="https://twitter.com/aapanitapratap" style="color: aliceblue;"
-                                            class="fa fa-twitter"></a>
-                                        <a href="https://www.facebook.com/AAPAnitaPratap" style="color: aliceblue;"
-                                            class="fa fa-facebook"></a>
-                                    </div> -->
+                                    <div>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-instagram"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-youtube"></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -498,6 +515,9 @@
             </div>
         </div>
         <div>
+            <h1 style="color: #FF4533; font-size: 50px; text-align: center; margin: 3%;">Performers</h1>
+        </div>
+        <div>
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section_title mb-50">
@@ -519,10 +539,12 @@
                                     <!-- <h4>write anything</h4> -->
                                     <!-- <span>Acoustic drum</span> -->
                                     <div>
-                                        <a href="https://www.youtube.com/c/ramyn/featured" style="color: aliceblue;"
-                                            class="fa fa-youtube"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
                                         <a href="https://www.instagram.com/illusionistraymi" style="color: aliceblue;"
                                             class="fa fa-instagram"></a>
+                                        <a href="https://www.youtube.com/c/ramyn/featured" style="color: aliceblue;"
+                                            class="fa fa-youtube"></a>
                                     </div>
                                 </div>
                             </div>
@@ -544,6 +566,8 @@
                 </div>
             </div>
         </div>
+
+
         <div>
             <div class="row">
                 <div class="col-lg-8">
@@ -565,10 +589,13 @@
                                     <!-- <h4>write anything</h4> -->
                                     <!-- <span>Acoustic drum</span> -->
                                     <div>
-                                        <a href="ttps://www.youtube.com/channel/UCH_cAFrCPJzRWgohL8IlzKw" style="color: aliceblue;"
-                                            class="fa fa-youtube"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-twitter"></a>
+                                        <a href="#" style="color: aliceblue;" class="fa fa-facebook"></a>
                                         <a href="https://www.instagram.com/jomarshal.music/" style="color: aliceblue;"
                                             class="fa fa-instagram"></a>
+                                        <a href="ttps://www.youtube.com/channel/UCH_cAFrCPJzRWgohL8IlzKw"
+                                            style="color: aliceblue;" class="fa fa-youtube"></a>
+
                                     </div>
                                 </div>
                             </div>
